--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-685.0KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇭🇰 香港-4.20MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.37MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 波兰-911.6KB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇨🇳 中国-177.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 38.107.226.132, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.107.226.132, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: 38.107.226.132, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -66,19 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-445.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-4.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 波兰-911.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-177.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
