--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇦 加拿大-362.9KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 波兰-157.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
   - {name: 🇨🇳 中国-923.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-1.17MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-2.18MB/s(Youtube:不良林), server: 120.233.29.189, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-523.7KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-1.23MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.07MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-458.8KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-607.3KB/s(Youtube:不良林), server: 194.156.231.253, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-555.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 波兰-157.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-523.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-555.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
